Egg News - User registration

--- a/Guia_Spring/EggNews/src/main/resources/templates/cpanel.html
+++ b/Guia_Spring/EggNews/src/main/resources/templates/cpanel.html
@@ -19,10 +19,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Log in</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="cpanel">Control Panel</a>
+                <a class="nav-link active" href="cpanel">Control Panel</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Log in</a>
             </li>
         </ul>
     </div>
