--- a/Guia_Spring/EggNews/src/main/resources/templates/index.html
+++ b/Guia_Spring/EggNews/src/main/resources/templates/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Egg News</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-    <!-- Agrega tu archivo de estilos CSS personalizado -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -20,10 +19,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Log in</a>
+                <a class="nav-link active" href="/">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="cpanel">Control Panel</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Log in</a>
             </li>
         </ul>
     </div>
